# error-boundaries-example

./: .env  Cargo.toml  demo.sh  test_file.db
migrations/: 0000_create_tables.sql
src/: main.rs
src/api/: error.rs  mod.rs  router.rs
src/api/endpoints/: accounts.rs  mod.rs  transactions.rs  users.rs
src/auth/: error.rs  mod.rs  password.rs  user.rs
src/bank/: account.rs  bank.rs  error.rs  mod.rs  transaction.rs
src/store/: error.rs  mod.rs  store.rs  store_mem.rs  store_sqlite.rs
