[package]
name = "error-boundaries-example"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.9", features = ["macros"] }
serde = "1.0.216"
tokio = { version = "1.42.0", features = ["full"] }
sqlx = { version = "=0.8.1", features = ["sqlite"] }
rusqlite = "=0.32.1"
async-trait = "0.1.83"
argon2 = "0.5.3"
rand = "0.8.5"
